--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <link rel="shortcut icon" href="src/assets/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./src/styles/global.css" />
+    <link rel="stylesheet" href="./src/styles/global/global.css" />
     <title>Instagram</title>
   </head>
   <body>
